# gnt

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/models/: CMakeLists.txt  item.cpp  item.h  model.cpp  model.h
